<resources>
    <string name="app_logo">App Logo</string>
    <string name="app_name">Lumi Route</string>
    <string name="back">Back</string>
    <string name="blue">Blue</string>
    <string name="change_mode">Change Mode</string>
    <string name="color_demo">Color Demo</string>
    <string name="color_settings">Color Settings</string>
    <string name="connect_helmet">Connect Helmet</string>
    <string name="destination">Destination</string>
    <string name="end_navigation">End Navigation</string>
    <string name="english">English</string>
    <string name="feedback">Feedback</string>
    <string name="french">French</string>
    <string name="german">German</string>
    <string name="give_feedback">Give Feedback</string>
    <string name="green">Green</string>
    <string name="japanese">Japanese</string>
    <string name="language">Language</string>
    <string name="language_settings">Language Settings</string>
    <string name="light_frequency">Light Frequency</string>
    <string name="light_intensity">Light Intensity</string>
    <string name="light_settings">Light Settings</string>
    <string name="navigation">Navigation</string>
    <string name="navigation_icon">Navigation Icon</string>
    <string name="pair">Pair</string>
    <string name="project_university">A project of Hochschule Flensburg</string>
    <string name="red">Red</string>
    <string name="scan_for_devices">Scan for Devices</string>
    <string name="set_destination">Set Destination</string>
    <string name="settings">Settings</string>
    <string name="start_navigation">Start Navigation</string>
    <string name="submit">Submit</string>
    <string name="university_logo">University Logo</string>
    <string name="direction_arrow">Direction Arrow</string>
    <string name="direction">Direction</string>
    <string name="debug">Debug</string>
    <string name="test">Test</string>
    <string name="blink_left">Blink Left</string>
    <string name="blink_right">Blink Right</string>
    <string name="warn_light">Warning Light</string>
    <string name="disconnect">Disconnect</string>
    <string name="stop">Stop</string>
</resources>